Aplicacion listando todas las citas en pantalla

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+.table {
+    border-collapse: collapse;
+    margin: auto;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    width: 80%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.table thead tr {
+    background-color: #009398;
+    color: #ffffff;
+    text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.table th,
+.table td {
+    padding: 12px 15px;
+}   
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
 }
 
-.App-link {
-  color: #61dafb;
+.table tbody tr:last-of-type {
+    border-bottom: 2px solid #009398;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table tbody tr.active-row {
+    font-weight: bold;
+    color: #009398;
 }
